<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/friend_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"/>

    <ImageView
        android:id="@+id/friend_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/cat"
        android:contentDescription="@string/head_image" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/friend_img"
        android:text="@string/app_name"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/friend_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/friend_name"
        app:layout_constraintLeft_toRightOf="@id/friend_img"
        android:text="@string/something"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>